<resources>
    <string name="app_name">GreenQuiz</string>
    <string name="app_description">GreenQuiz is an application that aims to be sensitive to CO2 emissions per capita. You will be able to compare your consumption with other nationalities and know if you consume like the world average or not. So don\'t hesitate to launch a quiz!</string>

    <string name="validate_button">Validate EN</string>
    <string name="start_quiz_button">Let\'s start a Quiz</string>
    <string name="register_leaderboard_button">Register in the ranking</string>
    <string name="translate_app_title">Languages</string>
    <string name="translate_app_fr">French</string>
    <string name="translate_app_en">English</string>
    <string name="result_btn_twitter">Share on Twitter</string>
    <string name="result_see_leaderbord_btn">See the Leaderbord</string>
    <string name="exit_menu">Exit</string>
    <string name="radio_btn_yes">Yes</string>
    <string name="radio_btn_no">No</string>

</resources>