<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/leaderboard"
        android:icon="@drawable/ic_trophy"
        android:title="leaderboard"
        app:showAsAction="always" />

    <item
        android:title="@string/translate_app_title">
        <menu >
            <item
                android:id="@+id/translate_app_fr"
                android:title="@string/translate_app_fr"
                />
            <item
                android:id="@+id/translate_app_en"
                android:title="@string/translate_app_en"
                />
        </menu>
    </item>

    <item
        android:id="@+id/quitter_button"
        android:title="@string/exit_menu"
        />
</menu>