<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="Exemple question"
        android:textSize="30dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginStart="50dp">

        <RadioButton
            android:id="@+id/radio_btn_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_yes"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radio_btn_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radio_btn_no" />

    </RadioGroup>

    <Button
        android:id="@+id/qestion_btn_valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="50dp"
        android:text="@string/validate_button"
        android:background="@color/button"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/indentation_question"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="100dp"
        android:text="QUESTION [ x  /  n ]"
        android:textSize="20dp" />

</RelativeLayout>